--- a/views/mensagem.html
+++ b/views/mensagem.html
@@ -117,6 +117,7 @@
                                             alert('Mensagem enviada')                       
                                             return response.data 
                                         })         
+                        location.reload()
                     },
 
                     async onChange(){
