--- a/views/index.html
+++ b/views/index.html
@@ -34,13 +34,13 @@
                   <div class="card" style="width: 18rem;">
                       <div class="card-body">
                         <h5 class="card-title">Assinantes</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Cadastro de assinates</h6>                        
+                        <h6 class="card-subtitle mb-2 text-muted">Cadastro de assinantes</h6>                        
                       </div>
                     </div>
                   <br>
                   <!-- Button trigger modal -->
                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                   Cadastrar Assinate
+                   Cadastrar Assinante
                   </button>
 
                   <!-- Modal -->
