--- a/views/ranking.html
+++ b/views/ranking.html
@@ -34,7 +34,7 @@
                   <div class="card" style="width: 18rem;">
                       <div class="card-body">
                         <h5 class="card-title">Ranking</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Ranking de assinates</h6>                        
+                        <h6 class="card-subtitle mb-2 text-muted">Ranking de assinantes</h6>                        
                       </div>
                     </div>
                   <br>
